[gd_scene load_steps=2 format=2]

[ext_resource path="res://test/rigs/asteroid_gravity.gd" type="Script" id=1]

[node name="AsteroidGravityTest" type="Node2D"]
script = ExtResource( 1 )

[node name="EntityContainer" type="Node" parent="."]

[node name="GravityAsteroidSpawner" type="Timer" parent="."]

[node name="AsteroidSpawner" type="Timer" parent="."]

[connection signal="timeout" from="GravityAsteroidSpawner" to="." method="_on_GravityAsteroidSpawner_timeout"]
[connection signal="timeout" from="AsteroidSpawner" to="." method="_on_AsteroidSpawner_timeout"]
